--- a/news.txt
+++ b/news.txt
@@ -7,3 +7,5 @@
   -Params to help command 
   -Add proxy support
   -Add DM spammer
+
+If you have any ideas with new modules/commands or anything else that we can add make an issue named idea or dm me on discord at cyxl#0001
