--- a/news.txt
+++ b/news.txt
@@ -1,12 +1,10 @@
 # Added
 
-  -Made new and better help command 1/19
-  -Add proxy support
-  -Update readme.md
+  - Disable community mode command, included in the nuke command as well.
 
 # Want To Add
 
-  -Params to help command 
-  -Add DM spammer
+  - Params to help command 
+  - Add DM spammer
 
 If you have any ideas with new modules/commands or anything else that we can add make an issue named idea or dm me on discord at cyxl#0001
